@@ -5,13 +5,12 @@ import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
 import org.coconut.attribute.AttributeMap;
-import org.coconut.attribute.AttributeMaps;
-import org.coconut.attribute.common.SizeAttribute;
+import org.coconut.attribute.Attributes;
 import org.coconut.test.TestUtil;
 import org.junit.Test;
 
 public class LongAttributeTest {
-    static final AbstractLongAttribute LA = new AbstractLongAttribute("foo", 100) {};
+    static final AbstractLongAttribute LONG_A = new AbstractLongAttribute("foo", 100) {};
 
     static final AbstractLongAttribute NON_NEGATIVE = new AbstractLongAttribute("foo", 1) {
         @Override
@@ -22,15 +21,15 @@ public class LongAttributeTest {
 
     @Test
     public void testDefault() {
-        assertEquals(100L, LA.getDefaultValue());
+        assertEquals(100L, LONG_A.getDefaultValue());
     }
 
     @Test
     public void checkValid() {
-        LA.checkValid(Long.MIN_VALUE);
-        LA.checkValid(Long.MAX_VALUE);
-        LA.checkValid(new Long(Long.MIN_VALUE));
-        LA.checkValid(new Long(Long.MIN_VALUE));
+        LONG_A.checkValid(Long.MIN_VALUE);
+        LONG_A.checkValid(Long.MAX_VALUE);
+        LONG_A.checkValid(new Long(Long.MIN_VALUE));
+        LONG_A.checkValid(new Long(Long.MIN_VALUE));
 
         NON_NEGATIVE.checkValid(Long.MAX_VALUE);
     }
@@ -42,37 +41,37 @@ public class LongAttributeTest {
 
     @Test
     public void fromString() {
-        assertEquals(-1L, LA.fromString(Long.valueOf(-1).toString()));
-        assertEquals(Long.MIN_VALUE, LA.fromString(new Long(Long.MIN_VALUE).toString()));
-        assertEquals(Long.MAX_VALUE, LA.fromString(new Long(Long.MAX_VALUE).toString()));
+        assertEquals(-1L, LONG_A.fromString(Long.valueOf(-1).toString()));
+        assertEquals(Long.MIN_VALUE, LONG_A.fromString(new Long(Long.MIN_VALUE).toString()));
+        assertEquals(Long.MAX_VALUE, LONG_A.fromString(new Long(Long.MAX_VALUE).toString()));
     }
 
     @Test
     public void get() {
-        AttributeMap am = AttributeMaps.EMPTY_MAP;
-        AttributeMap am1 = AttributeMaps.singleton(LA, -1L);
-        AttributeMap am10000 = AttributeMaps.singleton(LA, 10000L);
-        AttributeMap ammax = AttributeMaps.singleton(LA, Long.MAX_VALUE);
+        AttributeMap am = Attributes.EMPTY_MAP;
+        AttributeMap am1 = Attributes.singleton(LONG_A, -1L);
+        AttributeMap am10000 = Attributes.singleton(LONG_A, 10000L);
+        AttributeMap ammax = Attributes.singleton(LONG_A, Long.MAX_VALUE);
 
-        assertEquals(100L, LA.getPrimitive(am));
-        assertEquals(-1l, LA.getPrimitive(am1));
-        assertEquals(10000l, LA.getPrimitive(am10000));
-        assertEquals(Long.MAX_VALUE, LA.getPrimitive(ammax));
+        assertEquals(100L, LONG_A.getPrimitive(am));
+        assertEquals(-1l, LONG_A.getPrimitive(am1));
+        assertEquals(10000l, LONG_A.getPrimitive(am10000));
+        assertEquals(Long.MAX_VALUE, LONG_A.getPrimitive(ammax));
 
-        assertEquals(10L, LA.getPrimitive(am, 10L));
-        assertEquals(-1l, LA.getPrimitive(am1, 10));
-        assertEquals(10000l, LA.getPrimitive(am10000, 10));
-        assertEquals(Long.MAX_VALUE, LA.getPrimitive(ammax, 10));
+        assertEquals(10L, LONG_A.getPrimitive(am, 10L));
+        assertEquals(-1l, LONG_A.getPrimitive(am1, 10));
+        assertEquals(10000l, LONG_A.getPrimitive(am10000, 10));
+        assertEquals(Long.MAX_VALUE, LONG_A.getPrimitive(ammax, 10));
 
         assertEquals(-1l, NON_NEGATIVE.getPrimitive(am, -1));
     }
 
     @Test
     public void isValid() {
-        assertTrue(LA.isValid(Long.MIN_VALUE));
-        assertTrue(LA.isValid(Long.MAX_VALUE));
-        assertTrue(LA.isValid(Long.valueOf(Long.MIN_VALUE)));
-        assertTrue(LA.isValid(Long.valueOf(Long.MAX_VALUE)));
+        assertTrue(LONG_A.isValid(Long.MIN_VALUE));
+        assertTrue(LONG_A.isValid(Long.MAX_VALUE));
+        assertTrue(LONG_A.isValid(Long.valueOf(Long.MIN_VALUE)));
+        assertTrue(LONG_A.isValid(Long.valueOf(Long.MAX_VALUE)));
 
         assertTrue(NON_NEGATIVE.isValid(Long.MAX_VALUE));
         assertFalse(NON_NEGATIVE.isValid(Long.MIN_VALUE));
@@ -80,28 +79,28 @@ public class LongAttributeTest {
 
     @Test
     public void set() {
-        AttributeMap am = new AttributeMaps.DefaultAttributeMap();
-        assertEquals(10l, LA.setAttribute(am, 10l).get(LA));
-        assertEquals(-10000l, LA.setAttribute(am, -10000l).get(LA));
-        assertEquals(10000l, LA.setValue(am, Long.valueOf(10000)).get(LA));
-        assertEquals(Long.MAX_VALUE, LA.setAttribute(am, Long.MAX_VALUE).get(LA));
+        AttributeMap am = new Attributes.DefaultAttributeMap();
+        assertEquals(10l, LONG_A.setAttribute(am, 10l).get(LONG_A));
+        assertEquals(-10000l, LONG_A.setAttribute(am, -10000l).get(LONG_A));
+        assertEquals(10000l, LONG_A.setValue(am, Long.valueOf(10000)).get(LONG_A));
+        assertEquals(Long.MAX_VALUE, LONG_A.setAttribute(am, Long.MAX_VALUE).get(LONG_A));
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void setIAE() {
-        NON_NEGATIVE.setAttribute(new AttributeMaps.DefaultAttributeMap(), -1L);
+        NON_NEGATIVE.setAttribute(new Attributes.DefaultAttributeMap(), -1L);
     }
 
     @Test(expected = NullPointerException.class)
     public void setNPE() {
-        LA.setAttribute(null, 1L);
+        LONG_A.setAttribute(null, 1L);
     }
 
     @Test
     public void toSingleton() {
-        assertEquals(-10l, LA.toSingleton(-10).get(LA));
-        assertEquals(10l, LA.toSingleton(10).get(LA));
-        assertEquals(Long.MAX_VALUE, LA.toSingleton(Long.MAX_VALUE).get(LA));
+        assertEquals(-10l, LONG_A.toSingleton(-10).get(LONG_A));
+        assertEquals(10l, LONG_A.toSingleton(10).get(LONG_A));
+        assertEquals(Long.MAX_VALUE, LONG_A.toSingleton(Long.MAX_VALUE).get(LONG_A));
 
         assertEquals(10l, NON_NEGATIVE.toSingleton(10).get(NON_NEGATIVE));
     }
@@ -113,14 +112,14 @@ public class LongAttributeTest {
 
     @Test
     public void mapToLong() {
-        TestUtil.assertIsSerializable(LA.mapToLong());
-        AttributeMap am = AttributeMaps.singleton(LA, 10000L);
-        assertEquals(10000L, LA.mapToLong().map(am));
-        assertEquals(100L, LA.mapToLong().map(AttributeMaps.EMPTY_MAP));
+        TestUtil.assertIsSerializable(LONG_A.mapToLong());
+        AttributeMap am = Attributes.singleton(LONG_A, 10000L);
+        assertEquals(10000L, LONG_A.mapToLong().map(am));
+        assertEquals(100L, LONG_A.mapToLong().map(Attributes.EMPTY_MAP));
     }
 
     @Test(expected = NullPointerException.class)
     public void mapper() {
-        LA.mapToLong().map(null);
+        LONG_A.mapToLong().map(null);
     }
 }
